--- a/cocart_fibs.tex
+++ b/cocart_fibs.tex
@@ -12,7 +12,7 @@ In this section we review the basic theory of bisimplicial sets as laid out in \
 
 Bisimplicial sets can be defined in two equivalent ways:
 \begin{itemize}
-  \item As functors $\D\op \to \SSet$
+  \item As functors $\D\op \to \SSet$,
 
   \item As functors $(\D\op)^{2} \to \Set$.
 \end{itemize}
