--- a/constrained_spans.tex
+++ b/constrained_spans.tex
@@ -847,7 +847,7 @@ The way forward is clear: the functor $\pi$ is the zeroth row of a functor of Se
 
 The results of \hyperref[sec:cocartesian_fibrations_between_complete_segal_spaces]{Section~\ref*{sec:cocartesian_fibrations_between_complete_segal_spaces}} therefore guarantee the following.
 \begin{enumerate}
-  \item In order to show that $\pi$ is an inner fibration, it suffices to show that $\pi'$ is a Reedy fibration.
+  \item By \hyperref[cor:reedy_implies_inner]{Corollary~\ref*{cor:reedy_implies_inner}}, in order to show that $\pi$ is an inner fibration, it suffices to show that $\pi'$ is a Reedy fibration.
 
   \item In order to show that morphisms of the required form are $\pi$-cocartesian, it will suffice to show by \hyperref[cor:cocart_fib_between_css_gives_cocart_fib_of_quasicats]{Corollary~\ref*{cor:cocart_fib_between_css_gives_cocart_fib_of_quasicats}} that morphisms of this form are $\pi'$-cocartesian. 
 \end{enumerate}
@@ -1254,12 +1254,12 @@ We are now ready to show that morphisms of the form \hyperref[eq:form_of_p_cocar
         \Fun'(A_{6}, \category{C}) \times_{\Fun(\sd(\Delta^{\{0, 1\}}), \category{C})} \{e\}
         \arrow[r]
         \arrow[d]
-        \& \Fun'(A_{0}, \category{C}) \times_{\Fun(\sd(\Delta^{\{0, 1\}}), \category{C})} \{e\}
+        \& \Fun'(A_{1}, \category{C}) \times_{\Fun(\sd(\Delta^{\{0, 1\}}), \category{C})} \{e\}
         \arrow[d]
         \\
         \Fun'(A_{6}, \category{D}) \times_{\Fun(\sd(\Delta^{\{0, 1\}}), \category{C})} \{\pi e\}
         \arrow[r]
-        \& \Fun'(A_{0}, \category{D}) \times_{\Fun(\sd(\Delta^{\{0, 1\}}), \category{C})} \{\pi e\}
+        \& \Fun'(A_{1}, \category{D}) \times_{\Fun(\sd(\Delta^{\{0, 1\}}), \category{C})} \{\pi e\}
       \end{tikzcd}.
     }
   \end{equation*}
