--- a/introduction.tex
+++ b/introduction.tex
@@ -118,7 +118,7 @@ In \hyperref[ssc:cocartesian_fibrations]{Section~\ref*{ssc:cocartesian_fibration
 
 In \hyperref[sec:segal_spaces_of_spans]{Section~\ref*{sec:segal_spaces_of_spans}}, we use these results to prove the theorem of Barwick mentioned above, originally published in \cite[Thm.~12.2]{spectralmackeyfunctors1}. The proof leverages the fact, proven in \hyperref[sec:cocartesian_fibrations_between_complete_segal_spaces]{Section~\ref*{sec:cocartesian_fibrations_between_complete_segal_spaces}} that, when checking that a morphism in a Segal space is cocartesian relative to some Reedy fibration, it suffices to check that the lowest lifting problem $\Lambda^{2}_{1} \hookrightarrow \Delta^{2}$ has a contractible space of solutions, which is combinatorially tractible.
 
-In \hyperref[sec:application_to_presheaves]{Section~\ref*{sec:application_to_presheaves}}, we construct the functor $\hat{r}\colon \Span(\S) \to \ICat$, together with a lax monoidal structure on it.
+In \hyperref[sec:application_to_presheaves]{Section~\ref*{sec:application_to_presheaves}}, we construct the functor $\hat{r}\colon \Span(\S) \to \ICat$ described above, together with a lax monoidal structure on it.
 
 \subsection{Acknowledgements}
 \label{ssc:acknowledgements}
