--- a/sources.bib
+++ b/sources.bib
@@ -64,6 +64,15 @@
   Title  = {Notes on Higher Categories},
 }
 
+@article{beckergottlieb,
+  title={The transfer map and fiber bundles},
+  author={Becker, J. C.; Gottlieb, D. H.},
+  journal={topology},
+  volume={14},
+  pages={1--12},
+  year={1975}
+}
+
 @article{rezk2001model,
   title={A model for the homotopy theory of homotopy theory},
   author={Rezk, Charles},
